# cix

./: .gitignore  Cargo.toml  Dockerfile  README.md  grep
.github/workflows/: build.yml  push.yml
assets/worlds/: world.ldtk
src/: assets.rs  camera.rs  collide.rs  ext.rs  health.rs  lib.rs  main.rs  message.txt  prelude.txt  timed.rs
src/cix/: arm.rs  attack.rs  attire.rs  death.rs  eye.rs  fire.rs  head.rs  input.rs  mod.rs  particle.rs  spawn.rs  spawner.rs
src/enemies/: barrier.rs  gear.rs  mod.rs
src/world/: end.rs  fade.rs  flower.rs  gate.rs  mod.rs  prelude.rs
