[package]
name = "cix"
version = "0.1.0"
edition = "2021"

[dependencies]
include_optional = "1.0"

rand = "0.8"
num-traits = "0.2"
bevy_embedded_assets = "0.7"
iyes_progress = "0.8"
leafwing-input-manager = "0.9"

[dependencies.smallvec]
version = "1.10"
features = [
    "union",
    "const_generics",
]

[dependencies.bevy_asset_loader]
version = "0.15"
features = [
    "progress_tracking",
]

[dependencies.bevy_ecs_ldtk]
version = "0.6.0"
features = [
    "atlas",
]

[dependencies.bevy_ecs_tilemap]
version = "0.10.0"
features = [
    "atlas",
]

[dependencies.bevy_rapier2d]
version = "0.21"
features = [
    "simd-nightly",
    "parallel",
]

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "x11",

    "bevy_render",
    "bevy_core_pipeline",

    "png",
]
